--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Iniciar",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/home/miguel/Documentos/Games/Snake/a.out",
+            "program": "/home/miguel/Documentos/Games/Snake/snake",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
